# OatppWebApp

./: ApiClient.h  CMakeCache.txt  CMakeLists.txt  README.md  SyncSimpleExample.h  my-project-exe.vcxproj  my-project-exe.vcxproj.filters  my-project-lib.lib  my-project.sln
DTOs/: ClientDto.hpp  DefaultDto.hpp  ProductDto.hpp
HeaderControllers/: AccessoriesController.h  BoardGamesController.h  BooksController.h  ClientController.h  HomeDecoController.h  MagazinesController.h  MoviesController.h  MusicController.h  TeasController.h  WinesController.h
HeaderFiles/: ApiClient.h  ApiModels.h  SyncSimpleExample.h
HeaderModels/: Accessory.h  BoardGame.h  Book.h  Client.h  HomeDeco.h  Magazine.h  Movie.h  Music.h  Product.h  ShoppingPlatformAppComponent.h  Tea.h  Wine.h
HeaderModelsList/: AccessoryList.h  BoardGameList.h  BookList.h  ClientList.h  HomeDecoList.h  MagazineList.h  MovieList.h  MusicList.h  ProductList.h  TeaList.h  WineList.h
Helpers/: Reader.cpp  Reader.h
Models/: Accessory.cpp  BoardGame.cpp  Book.cpp  Client.cpp  HomeDeco.cpp  Magazine.cpp  Movie.cpp  Music.cpp  Product.cpp  Tea.cpp  Wine.cpp
ModelsList/: AccessoryList.cpp  BoardGameList.cpp  BookList.cpp  ClientList.cpp  HomeDecoList.cpp  MagazineList.cpp  MovieList.cpp  MusicList.cpp  ProductList.cpp  TeaList.cpp  WineList.cpp
ShoppingAPI/APIController/PlatformProducts/: AccesoriesController.cpp  BoardGamesController.cpp  BooksController.cpp  HomeDecoController.cpp  MagazinesController.cpp  MoviesController.cpp  MusicController.cpp  TeasController.cpp  WinesController.cpp
ShoppingAPI/APIController/Products/: ProductsController.h
my-project-exe.dir/Debug/: my-project-exe.exe.recipe
my-project-exe.dir/Debug/my-project-exe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  my-project-exe.lastbuildstate
my-project-lib.dir/Debug/: my-project-lib.lib.recipe  my-project-lib.vcxproj.FileListAbsolute.txt
my-project-lib.dir/Debug/my-project-lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  my-project-lib.lastbuildstate
my-project-test.dir/Debug/: my-project-test.exe.recipe
my-project-test.dir/Debug/my-project-test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sourcefiles/: StartApp.cpp
test/: MyControllerTest.cpp  MyControllerTest.hpp  tests.cpp
test/startapp/: MyApiTestClient.hpp  TestComponent.hpp
textFiles/: Accessories.txt  BoardGames.txt  Books.txt  Clients.txt  HomeDeco.txt  Magazines.txt  Movies.txt  Music.txt  Products.txt  Tea.txt
